# AcharNumeros

./: .editorconfig  .gitignore  AcharSoma.cpp  AcharSoma.sln  AcharSoma.vcxproj  AcharSoma.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Main.cpp  README.md  ReadFile.cpp  run_cmake_firsttime.sh
lib/AcharSoma/: AcharSoma.cpp  AcharSoma.h  CMakeLists.txt  GetNumbersFromFile.cpp  ReadFile.cpp  ReadFile.h
